--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "symfony/property-access": "~2.3",
         "knplabs/knp-components": "~1.2",
         "symfony/security": "~2.3",
+        "symfony/validator": "~2.3",
         "codeplex/phpexcel": "~1.7"
     },
     "autoload": {
